# Ebook-web

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: access.py  config.py  database.py  epub.py  main.py  models.py  schemas.py  security.py  serializers.py
backend/app/routers/: admin.py  auth.py  books.py  progress.py
backend/tests/: conftest.py  test_auth.py  test_permissions.py  test_progress.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: admin.ts  auth.ts  books.ts  client.ts
frontend/src/auth/: AuthContext.tsx  RouteGuard.tsx
frontend/src/components/: BookCard.tsx  BookCover.tsx  Modal.tsx  States.tsx
frontend/src/layout/: AppShell.tsx
frontend/src/pages/: AdminBooksPage.tsx  AdminUsersPage.tsx  LoginPage.tsx  ReaderPage.tsx  SettingsPage.tsx  SharedLibraryPage.tsx  ShelfPage.tsx  UploadsPage.tsx
frontend/src/reader/: epubCache.ts  useEpubReader.ts
frontend/src/styles/: global.css  layout.css  pages.css  reader.css
