[project]
name = "ebook-web-backend"
version = "1.0.0"
description = "LeafRead multi-user EPUB reading API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "pydantic-settings>=2.5,<3",
    "PyJWT>=2.9,<3",
    "pwdlib[argon2]>=0.2,<1",
    "python-multipart>=0.0.9,<1",
    "psycopg[binary]>=3.2,<4",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "httpx>=0.27,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
